fixed put routes
