# routes/favorites.js
@@ -4,7 +4,7 @@ const favoritesController = require('../controllers/favorites');
 router.get('/', favoritesController.getAll);
 router.get('//:id', favoritesController.getSingle);
 router.post('/', favoritesController.createFavorite);
-router.put('/;id', favoritesController.updateFavorite);
+router.put('/:id', favoritesController.updateFavorite);
 router.delete('/:id', favoritesController.deleteFavorite);
 
 module.exports = router;
